--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -45,7 +45,7 @@
 @mixin grid($columnas, $espaciado ) {
     display: grid;
     gap: $espaciado;
-    grid-template-columns: repeat($columnas, 1fr);
+    grid-template-columns: repeat($columnas, minmax(250px, 1fr));
 }
 
 @mixin contenedor {
