--- a/src/scss/paginas/_sangervibe.scss
+++ b/src/scss/paginas/_sangervibe.scss
@@ -7,12 +7,66 @@
         @include m.contenedor;
         @include m.grid(1, 3rem);
         @include m.tablet {
-            @include m.grid(2, 5rem);
+            @include m.grid-col-row(2, 5rem, auto auto);
             align-items: center;
         }
     }
 
+    &__contenido {
+        background-color: #f7f7f7; // Fondo suave
+        padding: 3rem;
+        border-radius: 1.5rem;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    }
+
+    &__swiper {
+        aspect-ratio: 3 / 4; // Vertical: más alto que ancho
+        width: 100%;
+        overflow: hidden;
+        margin: 0 auto; // centrar si lo deseas
+    }
+
+    .swiper-slide {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%; // toma el alto del swiper
+    }
+
+    &__picture {
+        width: 100%;
+        height: 100%;
+        
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; // Cubre el contenedor sin deformar
+            display: block;
+        }
+    }
+
     &__texto {
+        font-size: 2rem; // Más grande
         line-height: 2;
-    } 
+        // color: v.$negro; // Asume que v.$negro está definido
+        margin-bottom: 2rem;
+
+        @include m.tablet {
+            font-size: 2.8rem;
+        }
+    }
+
+    &__titulo {
+        font-size: 3rem;
+        color: v.$azul; // Resaltado
+        margin-top: 2.5rem;
+        margin-bottom: 1.5rem;
+        font-weight: 700;
+        border-left: 5px solid v.$azul;
+        padding-left: 1rem;
+
+        @include m.tablet {
+            font-size: 3.5rem;
+        }
+    }
 }
