--- a/src/scss/paginas/_paquetes.scss
+++ b/src/scss/paginas/_paquetes.scss
@@ -33,6 +33,12 @@
         text-align: center;
     }
 
+    &__moneda {
+        font-size: 3rem;
+        font-weight: v.$black;
+        color: v.$gris;
+    }
+
     &__contenedor-info {
         padding: 3rem;
     }
