Actualizacion de header y barra de navegacion

--- a/src/scss/ui/header/_barra.scss
+++ b/src/scss/ui/header/_barra.scss
@@ -2,7 +2,7 @@
 @use 'base/mixins' as m;
 
 .barra {
-    background-color: v.$azul;
+    background-color: v.$azulOscuro;
     &__contenido {
         @include m.contenedor;
         display: flex;
